fix: 🐛 try to fix icon-button color on ios

--- a/trumpet.css
+++ b/trumpet.css
@@ -86,6 +86,7 @@
   border: 2px solid;
   border-color: var(--success);
   box-sizing: content-box;
+  color: var(--text);
   cursor: pointer;
   display: flex;
   height: 50px;
